--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -20,7 +20,8 @@
     "vue-material": "^1.0.0-beta-15",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.2",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
